Fix missing volume for wp-data

--- a/wordpress_no-helm/wp-deployment.yaml
+++ b/wordpress_no-helm/wp-deployment.yaml
@@ -37,3 +37,7 @@ spec:
           volumeMounts:
             - name: wp-data
               mountPath: /var/www/html
+      volumes:
+        - name: wp-data
+          persistentVolumeClaim:
+            claimName: wp-pvc
